# regex

./: CMakeLists.txt  grammar.txt  init.sh
src/: lexical_analyzer.cpp  lexical_analyzer.hpp  main.cpp  parser.cpp  parser.hpp  syntax.cpp  syntax.hpp  syntax_analyzer.cpp  syntax_analyzer.hpp  token.hpp
tests/: lexical_analyzer_tests.cpp  parser_tests.cpp
